# shmon

./: AGENTS.md  Cargo.toml
docs/plans/: 2026-03-31-shmon-arch-refactor-design.md  2026-03-31-shmon-arch-refactor-impl-plan.md
src/: client.rs  main.rs  protocol.rs  utils.rs
src/server/: backlog.rs  daemon.rs  mod.rs  pty.rs
