[package]
name = "shmon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
nix = { version = "0.27", features = ["process", "signal", "term", "ioctl", "fs", "user"] }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
